--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,9 @@ dependencies = [
 
 [project.scripts]
 track-tracker = "main:main"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+    "ruff>=0.14.13",
+]
